<resources>
    <string name="app_name">CodeLearner</string>
    <string name="you_re_not_member">You\'re not member ?</string>
    <string name="register">Register</string>
    <string name="codeLearner">CodeLearner</string>
    <string name="learn_from">Learn from</string>
    <string name="anywhere">Anywhere</string>
    <string name="explore">Explore</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="you_re_an_admin">You\'re an Admin ?</string>
    <string name="admin_login">Admin login</string>
    <string name="hello_there">Hello there</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="back">back</string>
    <string name="next">Next</string>
    <string name="about_us">About us</string>
    <string name="menu">menu</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor</string>
    <string name="favourites">Favourites</string>
    <string name="edit_details">Edit Details</string>
    <string name="profileimg">profileImg</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="pick">Pick</string>
    <string name="what_you_like">what you like</string>
    <string name="java">Java</string>
    <string name="html">HTML</string>
    <string name="c">C</string>
    <string name="css">CSS</string>
    <string name="cPlusPlus">C++</string>
    <string name="php">PHP</string>
    <string name="javascript">JavaScript</string>
    <string name="python">Python</string>
    <string name="node_js">Node JS</string>
    <string name="sql">SQL</string>
    <string name="finish">Finish</string>
    <string name="react_js">React JS</string>
    <string name="all_students">All Students</string>
    <string name="student1">Student1</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="title_activity_student_navigation">StudentNavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">codelearner@learn.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="Page1Name">Profile</string>
    <string name="msg1">Welcome</string>
    <string name="msg2">Udeepa Desarana</string>
    <string name="btn1">View and Add Lessons</string>
    <string name="btn2">View Students</string>
    <string name="btn3">View Feedbacks</string>
    <string name="page2Name">Subjects</string>
    <string name="btn2_1">JAVA</string>
    <string name="btn2_2">Phython</string>
    <string name="btn2_3">PHP</string>
    <string name="page3name">Java</string>
    <string name="Les1">Lesson 1</string>
    <string name="Les2">Lesson 2</string>
    <string name="ma1">Material 1</string>
    <string name="ma2">Material 2</string>
    <string name="ma3">Material 3</string>
    <string name="ma4">Material 1</string>
    <string name="ma5">Material 2</string>
    <string name="btn3_1">+</string>
    <string name="addLessons">Add Lessons</string>
    <string name="title_Name">Lesson Name</string>
    <string name="btn4_1">Submit</string>
    <string name="cntnt">Content: </string>
    <string name="btn4_2">Add Materials</string>
    <string name="module">Module</string>
    <string name="question">Email:\n
        Module:\n
        Question:</string>
    <string name="update">Edit</string>
    <string name="reply">Reply</string>
    <string name="show_reply">Show_Reply</string>
    <string name="question_title">Post A Question</string>
    <string name="post">Post</string>
    <string name="disQuestion">Question</string>
    <string name="upload">Upload</string>
    <string name="answer2">Answer</string>
    <string name="answer3">Enter Answer</string>
    <string name="ShowAnswer">Display Answers</string>
    <string name="question2">Question</string>
    <string name="title_activity_student_drawer">StudentDrawerActivity</string>
    <string name="profile">Profile</string>
    <string name="learning">Learning</string>
    <string name="ask_question">Ask Question</string>
    <string name="about_service">About Service</string>
    <string name="feedback">Feedback</string>
    <string name="log_out">Log Out</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="titile_feedback">Feedback</string>
    <string name="feedback_img">feedback</string>
    <string name="Add_feedback">Add Feedback</string>
    <string name="backtocourse">Back To Course</string>
    <string name="maintxt">Subject</string>
    <string name="subtxt">Body</string>
    <string name="send">Send</string>
    <string name="entersub" />
    <string name="todoimg">todoimg</string>
    <string name="forget_your_password">Forget your Password ?</string>
    <string name="reset_now">Reset Now</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="submit">Submit</string>
    <string name="addtodo">Add a New ToDo</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="addtodo_btn">Add ToDo</string>
    <string name="addtodobtn">Add ToDo</string>
    <string name="todo">TODO</string>
    <string name="todo_img">To Do img</string>
    <string name="editTo">Edit ToDo</string>
    <string name="todoTitle">Title</string>
    <string name="todoDescription">Description</string>
    <string name="EditToDo_btn" />
    <string name="EditToDobtn">Edit ToDo</string>
    <string name="No_todos">You have x ToDos In Today</string>
    <string name="AddToDo">" Add ToDo"</string>
    <string name="DisplayTitle">Title</string>
    <string name="DisplayDescription">Description</string>
    <string name="TODOdone">done</string>
    <string name="Edit">Edit </string>
    <string name="lecturer_login">Lecturer login</string>
    <string name="are_you_a_lecturer">Are you a Lecturer ?</string>
    <string name="NoOfFeedbacks">You added x FeedBacks</string>
    <string name="AddaFeedBack">" Add FeedBack"</string>
    <string name="HeadFeedback">Add a New FeedBack</string>
    <string name="FeedbackTitle">Title</string>
    <string name="FeedbackDescription">Description</string>
    <string name="AddFeedBack_btn">Add FeedBack</string>
    <string name="FeedbackTitleTXT">FeedbackTitle</string>
    <string name="Feedback_Description">FeedbackDescriptionTXT</string>
    <string name="mailImg">mail</string>
    <string name="body_txt" />
</resources>