<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectFavouritesActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/welcome1"
        app:layout_constraintEnd_toStartOf="@+id/logo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@drawable/back"
        android:contentDescription="@string/back" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/heading"
        android:text="@string/codeLearner"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/welcome2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/finishBtn"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:background="@drawable/gradientbutton"
        android:fontFamily="@font/medium"
        android:text="@string/finish"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pythonBtn"
        app:layout_constraintVertical_bias="0.334" />

    <Button
        android:id="@+id/htmlBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginLeft="164dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shadowbutton"
        android:fontFamily="@font/medium"
        android:onClick="favouriteClicks"
        android:text="@string/html"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome1" />

    <Button
        android:id="@+id/javaBtn"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:background="@drawable/shadowbutton"
        android:fontFamily="@font/medium"
        android:onClick="favouriteClicks"
        android:text="@string/java"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/htmlBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/reactJsBtn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shadowbutton"
        android:fontFamily="@font/medium"
        android:onClick="favouriteClicks"
        android:text="@string/react_js"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/jsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/jsBtn"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="164dp"
        android:background="@drawable/shadowbutton"
        android:fontFamily="@font/medium"
        android:onClick="favouriteClicks"
        android:text="@string/javascript"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome1" />

    <TextView
        android:id="@+id/welcome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/heading"
        android:text="@string/what_you_like"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toEndOf="@+id/welcome1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />

    <Button
        android:id="@+id/cBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shadowbutton"
        android:fontFamily="@font/medium"
        android:onClick="favouriteClicks"
        android:text="@string/c"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/htmlBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sqlBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="284dp"
        android:layout_marginLeft="284dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/shadowbutton"
        android:fontFamily="@font/medium"
        android:onClick="favouriteClicks"
        android:text="@string/sql"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome1" />

    <Button
        android:id="@+id/nodeJsBtn"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:background="@drawable/shadowbutton"
        android:fontFamily="@font/medium"
        android:onClick="favouriteClicks"
        android:text="@string/node_js"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/sqlBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/pythonBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:background="@drawable/shadowbutton"
        android:fontFamily="@font/medium"
        android:onClick="favouriteClicks"
        android:text="@string/python"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/nodeJsBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcome1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:fontFamily="@font/heading"
        android:text="@string/pick"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/welcome2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/phpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shadowbutton"
        android:fontFamily="@font/medium"
        android:onClick="favouriteClicks"
        android:text="@string/php"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/cPlusPlusBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cPlusPlusBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginLeft="164dp"
        android:background="@drawable/shadowbutton"
        android:fontFamily="@font/medium"
        android:onClick="favouriteClicks"
        android:text="@string/cPlusPlus"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/cssBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cssBtn"
        android:layout_width="110sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/shadowbutton"
        android:fontFamily="@font/medium"
        android:onClick="favouriteClicks"
        android:text="@string/css"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome1" />

</androidx.constraintlayout.widget.ConstraintLayout>